--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,30 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+/*generics*/
+
+body{
+    background-color: black;
+}
+
+.page{
+    background-color: white;
+    width: 1500px;
+    height: 750px;
+    margin: 89px auto;
+
+}
+
+.container{
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+/* utility */
+
+.fix::after{
+    content: " ";
+    display:block;
+    clear: both;
+}
