--- a/css/style.css
+++ b/css/style.css
@@ -19,26 +19,13 @@ header{
     display: inline-block;
 }
 
-.page{
-    background-color: white;
-    width: 1488px;
-    height: 747px;
-    margin: 89px auto;
-
-}
-
-.container{
-    max-width: 1200px;
-    margin: 0 auto;
-}
-
 h1{
     font-size: 2.5rem;
     color: rgb(255, 66, 176);
 }
 
 p, span{
-   font-weight: lighter;
+    font-weight: lighter;
 }
 
 p{
@@ -49,6 +36,28 @@ a{
     color: rgb(35, 147, 252);
     text-decoration: none;
 }
+
+img{
+    height: 100px;
+    float: left;
+}
+
+/* page & container */
+
+.container{
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.page{
+    background-color: white;
+    width: 1488px;
+    height: 747px;
+    margin: 89px auto;
+
+}
+
+/* card */
 
 .column{
     float: left;
@@ -63,18 +72,15 @@ a{
     text-align: left;
 }
 
-img{
-    height: 100px;
-    float: left;
-}
-
 .card-info{
-    padding: 20px 120px;
+    padding: 13px 0;
+    margin-left: 120px;
 }
 
 .column-space{
     margin: 80px 30px;
 }
+
 /* utility */
 
 .fix::after{
