--- a/css/style.css
+++ b/css/style.css
@@ -59,9 +59,9 @@ img{
 /* card */
 
 .column{
-
+    width: calc(100% / 3 );
     float: left;
-    margin: 10px 10px;
+    padding: 10px;
 }
 
 .card{
